// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Spinner bounce displays a spinner-bounce class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "none",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner circular displays a spinner-circular class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "none",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-circular"
  >
    <div
      className="sc-inner"
    >
      <div
        className="sc-inner-animation"
      >
        <svg
          height="20"
          strokeWidth="16.00"
          viewBox="-3.00 -3.00 106.00 106.00"
          width="20"
        >
          <path
            className="sc-inner-track"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
          />
          <path
            className="sc-inner-head"
            d="M 50,50 m 0,-45 a 45,45 0 1 1 0,90 a 45,45 0 1 1 0,-90"
            pathLength="280"
            strokeDasharray="280 280"
            strokeDashoffset="210"
          />
        </svg>
      </div>
    </div>
  </span>
</styled.span>
`;

exports[`Spinner displays an is-hidden class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "none",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner dots displays a spinner-dots class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "none",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-dots"
  >
    <span>
      <span
        className="dot1"
      />
      <span
        className="dot2"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner has an className 1`] = `
<styled.span
  className="testing"
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner has custom background color 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#3C97D3",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#3C97D3",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner with fixed position has a loading class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "position": "fixed",
      "right": 0,
      "top": 0,
      "zIndex": 4000,
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner with inline position has a loading class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "backgroundColor": "#fff",
      "display": "inline-flex",
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;

exports[`Spinner with loading true has a loading class 1`] = `
<styled.span
  className=""
  css={
    Object {
      ".spinner-bounce": Object {
        ".bounce1": Object {
          "animationDelay": "-0.32s",
        },
        ".bounce1, .bounce2, .bounce3": Object {
          "animation": "ghjfcd 1.4s infinite ease-in-out both",
          "backgroundColor": "#9198A0",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "12px",
          "marginRight": "3px",
          "width": "12px",
        },
        ".bounce2": Object {
          "animationDelay": "-0.16s",
        },
        ".bounce3": Object {
          "marginRight": 0,
        },
      },
      ".spinner-circular": Object {
        ".sc-inner": Object {
          "alignItems": "center",
          "display": "flex",
          "justifyContent": "center",
          "overflow": "visible",
          "verticalAlign": "middle",
        },
        ".sc-inner path": Object {
          "fillOpacity": "0",
        },
        ".sc-inner svg": Object {
          "display": "block",
        },
        ".sc-inner-animation": Object {
          "animation": "gWPqvk .5s linear infinite",
        },
        ".sc-inner-head": Object {
          "stroke": "#9198A0",
          "strokeLinecap": "round",
          "transformOrigin": "center",
          "transition": "stroke-dashoffset .2s cubic-bezier(.4, 1, .75, .9)",
        },
        ".sc-inner-track": Object {
          "stroke": "rgba(92, 112, 128, .2)",
        },
        "display": "inline-block",
        "height": "16px",
        "position": "relative",
        "width": "16px",
      },
      ".spinner-dots": Object {
        ".dot1, .dot2": Object {
          "animation": "iQfAUB 2.0s infinite ease-in-out",
          "backgroundColor": "#3C97D3",
          "borderRadius": "100%",
          "display": "inline-block",
          "height": "60%",
          "position": "absolute",
          "top": 0,
          "width": "60%",
        },
        ".dot2": Object {
          "animationDelay": "-1.0s",
          "backgroundColor": "#E54C3B",
          "bottom": 0,
          "top": "auto",
        },
        "animation": "cZxgpV 2.0s infinite linear",
        "height": "40px",
        "position": "relative",
        "width": "40px",
      },
      "alignItems": "center",
      "backgroundColor": "#fff",
      "bottom": 0,
      "display": "flex",
      "justifyContent": "center",
      "left": 0,
      "position": "absolute",
      "right": 0,
      "top": 0,
      "zIndex": 1000,
    }
  }
>
  <span
    className="spinner-bounce"
  >
    <span>
      <span
        className="bounce1"
      />
      <span
        className="bounce2"
      />
      <span
        className="bounce3"
      />
    </span>
  </span>
</styled.span>
`;
